implementations/rust/c/bindings/src/bindings.rs

/* automatically generated by rust-bindgen */

pub const OCKAM_VAULT_SHARED_SECRET_LENGTH: u32 = 32;
pub const OCKAM_VAULT_SHA256_DIGEST_LENGTH: u32 = 32;
pub const OCKAM_VAULT_AES128_KEY_LENGTH: u32 = 16;
pub const OCKAM_VAULT_AES256_KEY_LENGTH: u32 = 32;
pub const OCKAM_VAULT_AEAD_AES_GCM_TAG_LENGTH: u32 = 16;
pub const OCKAM_VAULT_CURVE25519_PUBLICKEY_LENGTH: u32 = 32;
pub const OCKAM_VAULT_P256_PUBLICKEY_LENGTH: u32 = 65;
pub const OCKAM_VAULT_P256_PRIVATEKEY_LENGTH: u32 = 32;
pub const OCKAM_VAULT_HKDF_SHA256_OUTPUT_LENGTH: u32 = 32;
pub const OCKAM_VAULT_FEAT_RANDOM: u32 = 1;
pub const OCKAM_VAULT_FEAT_SHA256: u32 = 2;
pub const OCKAM_VAULT_FEAT_SECRET_ECDH: u32 = 4;
pub const OCKAM_VAULT_FEAT_HKDF_SHA256: u32 = 8;
pub const OCKAM_VAULT_FEAT_AEAD_AES_GCM: u32 = 16;
pub const OCKAM_VAULT_FEAT_ALL: u32 = 31;
pub const OCKAM_VAULT_ATECC608A_IO_PROTECTION_KEY_SIZE: u32 = 32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ockam_error_t {
    pub code: ::std::os::raw::c_int,
    pub domain: *const ::std::os::raw::c_char,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_error_code_t {
    OCKAM_ERROR_NONE = 0,
}
extern "C" {
    pub static OCKAM_MEMORY_INTERFACE_ERROR_DOMAIN: *const ::std::os::raw::c_char;
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ockam_error_code_memory_interface_t {
    OCKAM_MEMORY_INTERFACE_ERROR_INVALID_PARAM = 1,
}
extern "C" {
    #[doc = " @brief   Deinitialize the specified ockam memory object."]
    #[doc = " @param   memory[in]  The ockam memory object to deinitialize."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory received."]
    pub fn ockam_memory_deinit(memory: *mut ockam_memory_t) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Allocate memory from the specified memory module"]
    #[doc = " @param   memory[in]      The ockam memory object to use."]
    #[doc = " @param   buffer[in]      Pointer to a buffer to allocate."]
    #[doc = " @param   buffer_size[in] Buffer size (in bytes) to allocate."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory or buffer received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if buffer_size <=0."]
    #[doc = " @return  MEMORY_ERROR_ALLOC_FAIL if unable to allocate the desired buffer."]
    pub fn ockam_memory_alloc_zeroed(
        memory: *mut ockam_memory_t,
        buffer: *mut *mut ::core::ffi::c_void,
        buffer_size: usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Free the specified buffer."]
    #[doc = " @param   memory[in]      The ockam memory object to use."]
    #[doc = " @param   buffer[in]      Buffer to free. Must have been allocated from alloc()."]
    #[doc = " @param   buffer_size[in] Size of the buffer that was allocated. Must match what was specified in alloc."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory or buffer received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if buffer_size <=0."]
    pub fn ockam_memory_free(
        memory: *mut ockam_memory_t,
        buffer: *mut ::core::ffi::c_void,
        buffer_size: usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Set a set_size number of bytes to the buffer with value."]
    #[doc = " @param   memory[in]    The ockam memory object to use."]
    #[doc = " @param   buffer[out]   The buffer to fill with the specified value."]
    #[doc = " @param   value[in]     The value to set the the buffer with."]
    #[doc = " @param   set_size[in]  The number of bytes to set buffer with value."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory or buffer received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if set_size <=0."]
    pub fn ockam_memory_set(
        memory: *mut ockam_memory_t,
        buffer: *mut ::core::ffi::c_void,
        value: u8,
        set_size: usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Copy data from the source buffer to the destination buffer."]
    #[doc = " @param   memory[in]        The ockam memory object to use."]
    #[doc = " @param   destination[out]  Buffer to place the copied data into. Can not overlap with source."]
    #[doc = " @param   source[in]        Buffer to copy data from."]
    #[doc = " @param   copy_size[in]     Size of data to copy."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory, destination or source received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if copy_size <=0."]
    pub fn ockam_memory_copy(
        memory: *mut ockam_memory_t,
        destination: *mut ::core::ffi::c_void,
        source: *const ::core::ffi::c_void,
        copy_size: usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Move move_size bytes from source to destination."]
    #[doc = " @param   memory[in]        The ockam memory object to use."]
    #[doc = " @param   destination[out]  Buffer to place the moved data into. May overlap with source."]
    #[doc = " @param   source[in]        Buffer to move data from."]
    #[doc = " @param   move_size[in]     Size of data to move."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory, destination or source received."]
    #[doc = " @return  MEMORY_ERROR_INVALID_SIZE if move_size <=0."]
    pub fn ockam_memory_move(
        memory: *mut ockam_memory_t,
        destination: *mut ::core::ffi::c_void,
        source: *mut ::core::ffi::c_void,
        move_size: usize,
    ) -> ockam_error_t;
}
extern "C" {
    #[doc = " @brief   Compare two blocks of memory."]
    #[doc = " @param   memory[in]       The ockam memory object to use."]
    #[doc = " @param   res[out]         Result. <0\tthe first byte that does not match has a lower value in lhs than in rhs."]
    #[doc = "0\tthe contents of both memory blocks are equal."]
    #[doc = ">0\tthe first byte that does not match has a greater value in lhs than in rhs."]
    #[doc = " @param   lhs[in]          Pointer to first block of memory."]
    #[doc = " @param   rhs[in]          Pointer to second block of memory."]
    #[doc = " @param   buffer_size[in]  Size of memory blocks."]
    #[doc = " @return  OCKAM_ERROR_NONE on success."]
    #[doc = " @return  MEMORY_ERROR_INVALID_PARAM if invalid memory, res, lhs or rhs received."]
    pub fn ockam_memory_compare(
        memory: *mut ockam_memory_t,
        res: *mut ::std::os::raw::c_int,
        lhs: *const ::core::ffi::c_void,
        rhs: *const ::core::ffi::c_void,
        move_size: usize,
    ) -> ockam_error_t;
}
